# dotfiles

./: .gitignore  .gitmodules  .vimrc  README.md  README.rst  conkyrc  devdocs.json  gitconfig  isort.cfg  mpv.conf  pip-reqs.txt  pkglist.txt  rtorrent.rc  sshmntconfig
.tmux/: conf
.vim/: rc
.zsh/: env  rc
Xorg/: Xmodmap  xinitrc  xxkbrc
ansible/: config
cron/: check-updates.sh
firejail/: game.desktop  gog.desktop  gog.profile
games/: gog.profile
go/: .gitignore
i3/: .gitignore  config  status.conf  xxkb.sh
kde/: .gitignore  askpass.sh  kdeencfs.sh
mpv/: .gitignore  mpv.conf
npm/: .gitignore  rc
pg/: .gitignore  psqlrc
pip/: requirements.txt
pkglist/: common.txt  desktop.txt
powerline/: config.json
project/: Dockerfile  README.rst  docker-compose.yml  editorconfig  envrc  fabfile.py  flake8  pyproject.toml  requirements-local.txt  sublime-project  tasks.py  teamocil
project/tmp/: nextjs-env.local
project/tmp/fixtures/: local-auth.json
project/tmp/sql/: fix-local-data.sql
project/zed/: settings.json
rofi/: config.rasi
rtorrent/: rc
st/: .gitignore  PKGBUILD
sublime-text/: .gitignore  Anaconda.sublime-settings  Default (Linux).sublime-keymap  FileHeader.sublime-settings  Git.sublime-settings  GitGutter.sublime-settings  HTML (Django).sublime-settings  LSP.sublime-settings  Markdown.sublime-settings  Package Control.sublime-settings  Preferences.sublime-settings  PyYapf.sublime-settings  Python Django.sublime-settings  Python.sublime-settings  SublimeLinter.sublime-settings  mysnippets.sublime-snippet  (+1 more)
sudo/: g_wheel
(+133 files in other folders)
