[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.poetry]
name = "project"
version = "0.1.0"
description = "Default config for projects"
authors = ["Petr Zelenin"]

[tool.poetry.dependencies]
python = ">=3.10"
ipdb = "^0.13"
ptpython = "^3.0"
python-lsp-server = "^1.12"

[tool.poetry.group.django.dependencies]
django = "^4.2"
django-debug-toolbar = "^4.4"
django-extensions = "^3.2"
