[project]
name = "project"
version = "0.1.0"
description = "Default config for projects"
authors = [
  { name = "Petr Zelenin", email = "po.zelenin@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
  "ipdb>=0.13",
  "ptpython>=3.0",
  "python-lsp-server>=1.14",
]

[tool.black]
line-length = 120
